--- a/14-grid/index.html
+++ b/14-grid/index.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <title>Grid</title>
-  </head>
-  <body>
-    <!-- Grid cols and rows -->
 
-    <!-- Col and row span -->
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <title>Grid</title>
+</head>
+
+<body>
+  <!-- Grid cols and rows -->
+  <div class="grid grid-cols-5 gap-2">
+    <div class="col-span-2 row-span-2 p-10 grid border border-blue-600 bg-blue-100">Item1</div>
+    <div class="p-10 grid border border-blue-600 bg-blue-100">Item2</div>
+    <div class="p-10 grid border border-blue-600 bg-blue-100">Item3</div>
+    <div class="p-10 grid border border-blue-600 bg-blue-100">Item4</div>
+    <div class="p-10 grid border border-blue-600 bg-blue-100">Item5</div>
+    <div class="p-10 grid border border-blue-600 bg-blue-100">Item6</div>
+    <div class="p-10 grid  border border-blue-600 bg-blue-100">Item7</div>
+    <div class="md:col-span-2 p-10 grid border border-blue-600 bg-blue-100">Item8</div>
+    <div class="p-10 grid border border-blue-600 bg-blue-100">Item9</div>
+  </div>
+
+  <!-- Col and row span -->
+</body>
+
 </html>
 
 <!-- 
